--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPELINE</title>
     <link rel="stylesheet" href="rest.css">
-    <link rel="stylesheet" href="./Hw2_ShopLine.css">
+    <link rel="stylesheet" href="20220315.css">
 </head>
 
 <body>
@@ -26,13 +26,13 @@
     <div class="header">
         <a href="#" class="logo"><img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977"></a>
         <nav>
-            <a href="#">開店服務<img src="Hw2_ShopLine/down.svg" alt=""></a>
-            <a href="#">方案費用<img src="Hw2_ShopLine/down.svg" alt=""></a>
+            <a href="#">開店服務<img src="20220315/down.svg" alt=""></a>
+            <a href="#">方案費用<img src="20220315/down.svg" alt=""></a>
             <a href="#">客戶案例</a>
             <a href="#">開店說明會</a>
             <a href="#">開店諮詢</a>
-            <a href="#">更多解決方案<img src="Hw2_ShopLine/down.svg" alt=""></a>
-            <a href="#">其他資源<img src="Hw2_ShopLine/down.svg" alt=""></a>
+            <a href="#">更多解決方案<img src="20220315/down.svg" alt=""></a>
+            <a href="#">其他資源<img src="20220315/down.svg" alt=""></a>
         </nav>
         <div class="url">
             <a href="#">免費試用</a>
@@ -233,9 +233,7 @@
         </div>
     </div>
     <div class="footer-top">
-        <div class="divider">
-            <hr>
-        </div>
+        <hr>
         <div class="menu">
             <h3>SHOPLINE</h3>
             <a href="#">關於我們</a>
@@ -323,7 +321,7 @@
     </div>
     <div class="chat">
         <button type="button">
-            <img src="Hw2_ShopLine/service.svg" alt="">
+            <img src="20220315/service.svg" alt="">
         </button>
     </div>
 </body>
