--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPELINE</title>
     <link rel="stylesheet" href="rest.css">
-    <link rel="stylesheet" href="./Hw2_ShopLine.css">
+    <link rel="stylesheet" href="Hw2_ShopLine.css">
 </head>
 
 <body>
