--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPELINE</title>
-<!--     <link rel="stylesheet" href="rest.css"> -->
-    <link rel="stylesheet" href="Hw2_ShopLine.css">
+    <link rel="stylesheet" href="rest.css">
+    <link rel="stylesheet" href="./Hw2_ShopLine.css">
 </head>
 
 <body>
@@ -221,111 +221,109 @@
             </div>
         </div>
     </div>
-    <div class="world">
-        <div class="end">
-            <div class="title">
-                <h2>全亞洲超過<br>350,000的品牌都在使用SHOPLINE</h2>
-                <div class="thing">
-                    <a href="#">免費試用14天    &rarr;</a>
-                </div>
+    <div class="end">
+        <div class="title">
+            <h2>全亞洲超過<br>350,000的品牌都在使用SHOPLINE</h2>
+            <div class="thing">
+                <a href="#">免費試用14天    &rarr;</a>
             </div>
-            <div class="pic">
-                <img src="https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820">
-            </div>
+        </div>
+        <div class="pic">
+            <img src="https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820">
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-top">
+    <div class="footer-top">
+        <div class="divider">
             <hr>
-            <div class="menu">
-                <h3>SHOPLINE</h3>
-                <a href="#">關於我們</a>
-                <a href="#">認識團隊</a>
-                <a href="#">人才招募</a>
-                <a href="#">合作機會</a>
-                <a href="#">精選夥伴</a>
-                <a href="#">媒體報導</a>
-            </div>
-            <div class="menu">
-                <h3>我要開店</h3>
-                <a href="#">方案費用</a>
-                <a href="#">功能模組</a>
-                <a href="#">客戶案例</a>
-                <a href="#">開店說明會</a>
-                <a href="#">開店諮詢</a>
-            </div>
-            <div class="menu">
-                <h3>功能特色</h3>
-                <a href="#">網路開店</a>
-                <a href="#">社群購物</a>
-                <a href="#">零售 POS</a>
-                <a href="#">網路商店</a>
-                <a href="#">網站製作</a>
-                <a href="#">電商物流</a>
-                <a href="#">訂單管理</a>
-                <a href="#">一頁商店</a>
-            </div>
-            <div class="menu">
-                <h3>開店資源</h3>
-                <a href="#">開店秘技</a>
-                <a href="#">版型主題</a>
-                <a href="#">新手問答</a>
-                <a href="#">POS 硬體</a>
-                <a href="#">最新功能</a>
-            </div>
-            <div class="menu solve">
-                <h3>更多解決方案</h3>
-                <a href="#">企業旗艦方案</a>
-                <a href="#">跨境電商方案</a>
-                <a href="#">廣告計畫方案</a>
-            </div>
-            <div class="menu other">
-                <h3>其他資源</h3>
-                <a href="#">電商教室</a>
-                <a href="#">充電工作坊</a>
-                <a href="#">DreamBig 創品牌</a>
-                <a href="#">電商成長學苑</a>
-                <a href="#">SHOPLINE TRENDS 電商數據庫</a>
-                <a href="#">LINE 官方帳號</a>
-            </div>
-            <div class="menu other">
-                <h3>應用案例</h3>
-                <a href="#">SHOPLINE Payments</a>
-                <a href="#">網紅口碑行銷方案</a>
-                <a href="#">實體零售</a>
-                <a href="#">IG 直播 +1</a>
-                <a href="#">社群電商工具包</a>
-            </div>
         </div>
-        <div class="news">
-            <a href="#">COVID-19 應變措施</a>
+        <div class="menu">
+            <h3>SHOPLINE</h3>
+            <a href="#">關於我們</a>
+            <a href="#">認識團隊</a>
+            <a href="#">人才招募</a>
+            <a href="#">合作機會</a>
+            <a href="#">精選夥伴</a>
+            <a href="#">媒體報導</a>
         </div>
-        <div class="footer-bottom">
-            <div class="divider">
-                <hr>
-            </div>
-            <div class="inf control">
-                    <a href="#">網站地圖</a>
-                    <a href="#">隱私權政策</a>
-                    <a href="#">會員條款</a>
-            </div>
-            <div class="app control">
-                <a href="#"><img src="https://picsum.photos/30/30/?random=27"></a>
-                <a href="#"><img src="https://picsum.photos/30/30/?random=28"></a>
-                <a href="#"><img src="https://picsum.photos/30/30/?random=29"></a>
-                <a href="#"><img src="https://picsum.photos/30/30/?random=30"></a>
-                <a href="#"><img src="https://picsum.photos/30/30/?random=31"></a>
-                <a href="#"><img src="https://picsum.photos/30/30/?random=32"></a>
-            </div>
-            <div class="copy control">
-                服務時間 星期一至五 上午 10 點至晚上 7 點<br>
-                &copy; copyright 2013-22 by SHOPLINE Limited.
-            </div>
+        <div class="menu">
+            <h3>我要開店</h3>
+            <a href="#">方案費用</a>
+            <a href="#">功能模組</a>
+            <a href="#">客戶案例</a>
+            <a href="#">開店說明會</a>
+            <a href="#">開店諮詢</a>
+        </div>
+        <div class="menu">
+            <h3>功能特色</h3>
+            <a href="#">網路開店</a>
+            <a href="#">社群購物</a>
+            <a href="#">零售 POS</a>
+            <a href="#">網路商店</a>
+            <a href="#">網站製作</a>
+            <a href="#">電商物流</a>
+            <a href="#">訂單管理</a>
+            <a href="#">一頁商店</a>
+        </div>
+        <div class="menu">
+            <h3>開店資源</h3>
+            <a href="#">開店秘技</a>
+            <a href="#">版型主題</a>
+            <a href="#">新手問答</a>
+            <a href="#">POS 硬體</a>
+            <a href="#">最新功能</a>
+        </div>
+        <div class="menu solve">
+            <h3>更多解決方案</h3>
+            <a href="#">企業旗艦方案</a>
+            <a href="#">跨境電商方案</a>
+            <a href="#">廣告計畫方案</a>
+        </div>
+        <div class="menu other">
+            <h3>其他資源</h3>
+            <a href="#">電商教室</a>
+            <a href="#">充電工作坊</a>
+            <a href="#">DreamBig 創品牌</a>
+            <a href="#">電商成長學苑</a>
+            <a href="#">SHOPLINE TRENDS 電商數據庫</a>
+            <a href="#">LINE 官方帳號</a>
+        </div>
+        <div class="menu other">
+            <h3>應用案例</h3>
+            <a href="#">SHOPLINE Payments</a>
+            <a href="#">網紅口碑行銷方案</a>
+            <a href="#">實體零售</a>
+            <a href="#">IG 直播 +1</a>
+            <a href="#">社群電商工具包</a>
+        </div>
+    </div>
+    <div class="news">
+        <a href="#">COVID-19 應變措施</a>
+    </div>
+    <div class="footer-bottom">
+        <div class="divider">
+            <hr>
+        </div>
+        <div class="inf control">
+                <a href="#">網站地圖</a>
+                <a href="#">隱私權政策</a>
+                <a href="#">會員條款</a>
+        </div>
+        <div class="app control">
+            <a href="#"><img src="https://picsum.photos/30/30/?random=27"></a>
+            <a href="#"><img src="https://picsum.photos/30/30/?random=28"></a>
+            <a href="#"><img src="https://picsum.photos/30/30/?random=29"></a>
+            <a href="#"><img src="https://picsum.photos/30/30/?random=30"></a>
+            <a href="#"><img src="https://picsum.photos/30/30/?random=31"></a>
+            <a href="#"><img src="https://picsum.photos/30/30/?random=32"></a>
+        </div>
+        <div class="copy control">
+            服務時間 星期一至五 上午 10 點至晚上 7 點<br>
+            &copy; copyright 2013-22 by SHOPLINE Limited.
         </div>
     </div>
     <div class="chat">
         <button type="button">
-            <img src="Hw2_ShopLine/service.svg" alt="">
+            <img src="20220315/service.svg" alt="">
         </button>
     </div>
 </body>
