--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPELINE</title>
-    <link rel="stylesheet" href="rest.css">
+    <!-- <link rel="stylesheet" href="rest.css"> -->
     <link rel="stylesheet" href="./Hw2_ShopLine.css">
 </head>
 
