--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -323,7 +323,7 @@
     </div>
     <div class="chat">
         <button type="button">
-            <img src="20220315/service.svg" alt="">
+            <img src="Hw2_ShopeLine/service.svg" alt="">
         </button>
     </div>
 </body>
