--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPELINE</title>
-    <!-- <link rel="stylesheet" href="rest.css"> -->
+    <link rel="stylesheet" href="rest.css">
     <link rel="stylesheet" href="./Hw2_ShopLine.css">
 </head>
 
@@ -24,7 +24,9 @@
     </div>
 
     <div class="header">
-        <a href="#" class="logo"><img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977"></a>
+        <h1>
+            <a href="#" class="logo"><img src="https://img.shoplineapp.com/media/image_clips/60811bb98a60d74a03808d4d/original.png?1619073977" alt="ShopLine"></a>
+        </h1>
         <nav>
             <a href="#">開店服務<img src="Hw2_ShopLine/down.svg" alt=""></a>
             <a href="#">方案費用<img src="Hw2_ShopLine/down.svg" alt=""></a>
@@ -41,7 +43,7 @@
 
     <div class="main">
         <div class="text">
-            <h1>想在哪開店創業？<br></h1>
+            <h2>想在哪開店創業？<br></h2>
             <h1 class="special">門市必備零售POS系統</h1>
             <p>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
             <input type="text" placeholder="請在此輸入點子信箱(可隨時更換)" name="" id="email">
