--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopLine</title>
     <link rel="stylesheet" href="../rest.css">
-    <link rel="stylesheet" href="20220322.css">
+    <link rel="stylesheet" href="Hw2_ShopLine.css">
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,15 +32,15 @@
                 </h1>
             </span>
             <nav>
-                <a href="#">開店服務<img src="20220315/down.svg" alt=""></a>
-                <a href="#">方案費用<img src="20220315/down.svg" alt=""></a>
+                <a href="#">開店服務<img src="Hw2_ShopLine/down.svg" alt=""></a>
+                <a href="#">方案費用<img src="Hw2_ShopLine/down.svg" alt=""></a>
                 <a href="#">客戶案例
                 </a>
                 <a href="#">開店說明會</a>
                 <a href="#">開店諮詢
                 </a>
-                <a href="#">更多解決方案<img src="20220315/down.svg" alt=""></a>
-                <a href="#">其他諮詢<img src="20220315/down.svg" alt=""></a>
+                <a href="#">更多解決方案<img src="Hw2_ShopLine/down.svg" alt=""></a>
+                <a href="#">其他諮詢<img src="Hw2_ShopLine/down.svg" alt=""></a>
             </nav>
             <span class="btn-try">
                 <a href="">免費試用</a>
@@ -355,7 +355,7 @@
     </div>
     <div class="chat">
         <button type="button">
-            <img src="20220315/service.svg" alt="">
+            <img src="Hw2_ShopLine/service.svg" alt="">
         </button>
     </div>
 </body>
