--- a/html/Hw2_ShopLine.html
+++ b/html/Hw2_ShopLine.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopLine</title>
-    <link rel="stylesheet" href="rest.css">
+    <link rel="stylesheet" href="./rest.css">
     <link rel="stylesheet" href="Hw2_ShopLine.css">
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
 </head>
