--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         h1{
             font-size: 45px;
             font-weight: bold;
+            margin-bottom: 20px;
         }
         ul li{
             font-size: 30px;
