--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         ul li{
             font-size: 30px;
+            list-style-type: square;
         }
         a{
             text-decoration: none;
@@ -24,8 +25,13 @@
 <body>
     <h1>我的HTML作業</h1>
     <ul class="HTML">
-        <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">作業1: 功課表</a></li>
-        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">作業2: ShopLine</a></li>
+        <h2>作業一</h2>
+        <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">功課表</a></li>
+        <h2>作業二</h2>
+        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">ShopLine</a></li>
+        <h2>作業三</h2>
+        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">Toyota_position</a></li>
+        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">Toyota_grid</a></li>
     </ul>
 </body>
 </html>
