--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="html/rest.css">
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
     <style>
+        body{
+            background: rgb(51, 51, 105) url("https://drive.google.com/file/d/1BEeogLzgdRGhVPx4_oljrs7Uh6a7AaRP/view?usp=sharing") no-repeat center;
+        }
         h1{
             font-size: 45px;
             font-weight: bold;
             margin-bottom: 20px;
         }
-        ul li{
+        body ul li{
             font-size: 30px;
             list-style-type: square;
+        }
+        .html ul li{
+            font-size: 20px;
+            list-style-type: upper-roman;
         }
         a{
             text-decoration: none;
@@ -25,13 +32,20 @@
 <body>
     <h1>我的HTML作業</h1>
     <ul class="HTML">
-        <h2>作業一</h2>
-        <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">功課表</a></li>
-        <h2>作業二</h2>
-        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">ShopLine</a></li>
-        <h2>作業三</h2>
-        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">Toyota_position</a></li>
-        <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">Toyota_grid</a></li>
+        <li>作業一 :</li>
+        <ul>
+            <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">功課表</a></li>
+        </ul>
+        <li>作業二 :</li>
+        <ul>
+            <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">ShopLine</a></li>
+        </ul>
+        <li>作業三 :</li>
+        <ul>
+            <li><a href="https://yu1129.github.io/html/Hw3_Toyota_1.html">Toyota_position</a></li>
+            <li><a href="https://yu1129.github.io/html/Hw3_Toyota_2.html">Toyota_grid</a></li>
+        </ul>
+        <li></li>
     </ul>
 </body>
 </html>
