--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         h1{
             font-size: 45px;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin: 20px 100px;
         }
-        body ul li{
+        body ul{
             font-size: 30px;
             list-style-type: square;
         }
-        .html ul li{
+        .html ul{
             font-size: 20px;
             list-style-type: upper-roman;
         }
