--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         body ul{
             font-size: 30px;
             list-style-type: square;
+            margin-left: 150px;
         }
         .html ul{
             font-size: 20px;
             list-style-type: upper-roman;
+            margin-left: 200px;
         }
         a{
             text-decoration: none;
