--- a/index.html
+++ b/index.html
@@ -35,19 +35,18 @@
     <h1>我的HTML作業</h1>
     <ul class="HTML">
         <li>作業一 :</li>
-        <ul>
+        <ul class="content">
             <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">功課表</a></li>
         </ul>
         <li>作業二 :</li>
-        <ul>
+        <ul class="content">
             <li><a href="https://yu1129.github.io/html/Hw2_ShopLine">ShopLine</a></li>
         </ul>
         <li>作業三 :</li>
-        <ul>
+        <ul class="content">
             <li><a href="https://yu1129.github.io/html/Hw3_Toyota_1.html">Toyota_position</a></li>
             <li><a href="https://yu1129.github.io/html/Hw3_Toyota_2.html">Toyota_grid</a></li>
         </ul>
-        <li></li>
     </ul>
 </body>
 </html>
