--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
     <style>
         body{
-            background: rgb(51, 51, 105) url("https://drive.google.com/file/d/1BEeogLzgdRGhVPx4_oljrs7Uh6a7AaRP/view?usp=sharing") no-repeat center;
+            background: rgb(127, 255, 212) url(pic.jpg)no-repeat center top / 900px 900px;
         }
         h1{
             font-size: 45px;
@@ -19,12 +19,12 @@
         body ul{
             font-size: 30px;
             list-style-type: square;
-            margin-left: 150px;
+            margin: 15px 150px;
         }
-        .html ul{
+        .main .content{
             font-size: 20px;
             list-style-type: upper-roman;
-            margin-left: 170px;
+            margin: 10px 25px;
         }
         a{
             text-decoration: none;
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>我的HTML作業</h1>
-    <ul class="HTML">
+    <ul class="main">
         <li>作業一 :</li>
         <ul class="content">
             <li><a href="https://yu1129.github.io/html/Hw1_curriculum.html">功課表</a></li>
