--- a/html/Hw3_Toyota_1.html
+++ b/html/Hw3_Toyota_1.html
@@ -12,8 +12,8 @@
 <body>
     <div class="control-odd">
         <div class="decorate"></div>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <img src="https://picsum.photos/690/390/?random=10">
+        <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <img src="Hw3_Toyota/1.png" alt="操控樂趣">
         <div class="introduce">
             <h2><span>01</span>操控樂趣</h2>
             <h3>人人滿意的駕駛體驗</h3>
@@ -37,8 +37,8 @@
     </div>
     <div class="control-even">
         <div class="decorate"></div>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <img src="https://picsum.photos/690/390/?random=11">
+        <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <img src="Hw3_Toyota/2.png" alt="安全守護">
         <div class="introduce">
             <h2>安全守護<span>02</span></h2>
             <h3>行車更安全的高剛性車體</h3>
@@ -58,8 +58,8 @@
     </div>
     <div class="control-odd">
         <div class="decorate"></div>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <img src="https://picsum.photos/690/390/?random=12">
+        <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <img src="Hw3_Toyota/3.png" alt="乘坐舒適">
         <div class="introduce">
             <h2><span>03</span>乘坐舒適</h2>
             <h3>令人放鬆舒適的車室空間</h3>
@@ -83,8 +83,8 @@
     </div>
     <div class="control-even">
         <div class="decorate"></div>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <img src="https://picsum.photos/690/390/?random=13">
+        <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <img src="Hw3_Toyota/4.png" alt="以人為本">
         <div class="introduce">
             <h2>以人為本<span>04</span></h2>
             <h3>使用者導向的貼心設計</h3>
@@ -104,8 +104,8 @@
     </div>
     <div class="control-odd">
         <div class="decorate"></div>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        <img src="https://picsum.photos/690/390/?random=14">
+        <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <img src="Hw3_Toyota/5.png" alt="引以為傲">
         <div class="introduce">
             <h2><span>05</span>引以為傲</h2>
             <h3>極具吸引力的精心設計</h3>
