--- a/html/Hw3_Toyota_2.html
+++ b/html/Hw3_Toyota_2.html
@@ -26,7 +26,10 @@
             <p>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。</p>
         </div>
         <div class="innovation">
-            <h4>因為我們做了這些革新</h4>
+            <div class="divider">
+                <h4>因為我們做了這些革新</h4>
+                <hr>
+            </div>
             <h5>低重心設計</h5>
             <ul>
                 <li>透過低重心設計，不僅呈現更低服的外觀，更能減少車身側傾，保持高速行駛穩定性。</li>
@@ -57,7 +60,10 @@
             <p>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全功能讓您輕鬆自如享受旅程、毫無後顧之憂。</p>
         </div>
         <div class="innovation">
-            <h4>因為我們做了這些革新</h4>
+            <div class="divider">
+                <h4>因為我們做了這些革新</h4>
+                <hr>
+            </div>
             <h5>主動安全</h5>
             <ul>
                 <li>以先進的 TSS 系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</li>
@@ -83,7 +89,10 @@
             </p>
         </div>
         <div class="innovation">
-            <h4>因為我們做了這些革新</h4>
+            <div class="divider">
+                <h4>因為我們做了這些革新</h4>
+                <hr>
+            </div>
             <h5>駕駛位置最佳化</h5>
             <ul>
                 <li>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地超控方向盤。</li>
@@ -112,7 +121,10 @@
             <p>藉由高度人性化的介面整合、傳遞車輛資訊、豐富日常駕駛體驗。從提升油耗表現到行李廂空間最適化，均細心考量，更加貼近使用者真正所需與習慣，並給予及時回應。</p>
         </div>
         <div class="innovation">
-            <h4>因為我們做了這些革新</h4>
+            <div class="divider">
+                <h4>因為我們做了這些革新</h4>
+                <hr>
+            </div>
             <h5>優異油耗表現</h5>
             <ul>
                 <li>以 AURIS 為例，更強勁的高校引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</li>
@@ -137,7 +149,10 @@
             <p>TNGA 車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</p>
         </div>
         <div class="innovation">
-            <h4>因為我們做了這些革新</h4>
+            <div class="divider">
+                <h4>因為我們做了這些革新</h4>
+                <hr>
+            </div>
             <h5>設計概念</h5>
             <ul>
                 <li>TNGA 低重心設計，不僅呈現更低伏的運動外觀，更講究高品質內裝的一致性。</li>
