--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         h1{
             margin-left: 20px;
         }
-        .web{
+        .web, .js{
             margin-left: 60px;
         }
         .main{
@@ -70,6 +70,15 @@
                 <ul class="content">
                     <li><a href="https://yu1129.github.io/html/Hw3_Toyota_1.html">Toyota_position</a></li>
                     <li><a href="https://yu1129.github.io/html/Hw3_Toyota_2.html">Toyota_grid</a></li>
+                </ul>
+            </ul>
+        </div>
+        <div class="js">
+            <h2>我的 JavaScript 作業</h2>
+            <ul class="main">
+                <li>作業一 :</li>
+                <ul class="content">
+                    <li><a href="https://yu1129.github.io/JavaScript/Hw1_Information">Information</a></li>
                 </ul>
             </ul>
         </div>
