v5_change_word_style

--- a/html/Hw3_Toyota_1.html
+++ b/html/Hw3_Toyota_1.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toyota_position</title>
-    <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="rest.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="../rest.css">
     <link rel="stylesheet" href="Hw3_Toyota_1.css">
 </head>
 <body>
     <div class="control-odd">
         <div class="decorate"></div>
         <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
-        <img src="Hw3_Toyota/1.png" alt="操控樂趣">
+        <img class="main-pic" src="Hw3_Toyota/1.png" alt="操控樂趣">
         <div class="introduce">
             <h2><span>01</span>操控樂趣</h2>
             <h3>人人滿意的駕駛體驗</h3>
@@ -41,7 +40,7 @@
     <div class="control-even">
         <div class="decorate"></div>
         <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
-        <img src="Hw3_Toyota/2.png" alt="安全守護">
+        <img class="main-pic" src="Hw3_Toyota/2.png" alt="安全守護">
         <div class="introduce">
             <h2>安全守護<span>02</span></h2>
             <h3>行車更安全的高剛性車體</h3>
@@ -65,7 +64,7 @@
     <div class="control-odd">
         <div class="decorate"></div>
         <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
-        <img src="Hw3_Toyota/3.png" alt="乘坐舒適">
+        <img class="main-pic" src="Hw3_Toyota/3.png" alt="乘坐舒適">
         <div class="introduce">
             <h2><span>03</span>乘坐舒適</h2>
             <h3>令人放鬆舒適的車室空間</h3>
@@ -93,7 +92,7 @@
     <div class="control-even">
         <div class="decorate"></div>
         <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
-        <img src="Hw3_Toyota/4.png" alt="以人為本">
+        <img class="main-pic" src="Hw3_Toyota/4.png" alt="以人為本">
         <div class="introduce">
             <h2>以人為本<span>04</span></h2>
             <h3>使用者導向的貼心設計</h3>
@@ -117,7 +116,7 @@
     <div class="control-odd">
         <div class="decorate"></div>
         <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
-        <img src="Hw3_Toyota/5.png" alt="引以為傲">
+        <img class="main-pic" src="Hw3_Toyota/5.png" alt="引以為傲">
         <div class="introduce">
             <h2><span>05</span>引以為傲</h2>
             <h3>極具吸引力的精心設計</h3>
