v5_change_word_style

--- a/html/Hw3_Toyota_2.html
+++ b/html/Hw3_Toyota_2.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="control-odd">
-        <div class="decorate s"></div>
+        <div class="decorate"></div>
         <div class="pic">
             <img src="Hw3_Toyota/1.png" alt="操控樂趣">
         </div>
