--- a/html/Hw3_Toyota_2.html
+++ b/html/Hw3_Toyota_2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toyota_grid</title>
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="rest.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="Hw3_Toyota_2.css">
 </head>
 <body>
