--- a/html/Hw4_ShopLine.html
+++ b/html/Hw4_ShopLine.html
@@ -355,19 +355,21 @@
                 <div class="bottom col-12">
                     <hr>
                     <div class="wrap">
-                        <span class="inf col-12 col-lg-4">
-                                <a href="#">網站地圖</a>
-                                <a href="#">隱私權政策</a>
-                                <a href="#">會員條款</a>
-                        </span>
-                        <span class="app col-12 col-lg-4">
-                            <a href="#" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                            <a href="#"><i class="fa-regular fa-comment-dots"></i></a>
-                            <a href="#"><i class="fa-regular fa-envelope"></i></a>
-                        </span>
+                        <div class="md-change col-12 col-lg-8">
+                            <span class="inf col-12 col-lg-6">
+                                    <a href="#">網站地圖</a>
+                                    <a href="#">隱私權政策</a>
+                                    <a href="#">會員條款</a>
+                            </span>
+                            <span class="app col-12 col-lg-6">
+                                <a href="#" class="fb"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="#"><i class="fa-regular fa-comment-dots"></i></a>
+                                <a href="#"><i class="fa-regular fa-envelope"></i></a>
+                            </span>
+                        </div>
                         <span class="copy col-12 col-lg-4">
                             服務時間 星期一至五 上午 10 點至晚上 7 點<br>
                             &copy; copyright 2013-22 by SHOPLINE Limited.
