--- a/html/Hw4_ShopLine.html
+++ b/html/Hw4_ShopLine.html
@@ -35,12 +35,27 @@
                 <label for="menu-control" class="hb"></label>
                 <nav>
                     <a href="#">開店服務<img src="Hw2_ShopLine/down.svg" alt="下拉選單"></a>
+                    <hr>
                     <a href="#">方案費用<img src="Hw2_ShopLine/down.svg" alt="下拉選單"></a>
+                    <hr>
                     <a href="#">客戶案例</a>
+                    <hr>
                     <a href="#">開店說明會</a>
+                    <hr>
                     <a href="#">開店諮詢</a>
+                    <hr>
                     <a href="#">更多解決方案<img src="Hw2_ShopLine/down.svg" alt="下拉選單"></a>
+                    <hr>
                     <a href="#">其他諮詢<img src="Hw2_ShopLine/down.svg" alt="下拉選單"></a>
+                    <hr>
+                    <div class="btn-group">
+                        <a href="#" class="col-12">免費試用</a>
+                        <a href="#" class="col-12">登入網店</a>
+                    </div>
+                    <div class="btn-bottom">
+                        <a href="#" class="col-6">開店諮詢</a>
+                        <a href="#" class="col-6">開店說明會</a>
+                    </div>
                 </nav>
                 <div class="btn-try">
                     <a href="#">免費試用</a>
