--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
             <ul class="main">
                 <li>作業一 :</li>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw1_Information">Information</a></p>
+                <li>作業二 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw2_Pokemon.html">Pokemon</a></p>
             </ul>
         </div>
     </div>
