--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                 <p><a href="https://yu1129.github.io/JavaScript/Hw1_Information">Information</a></p>
                 <li>作業二 :</li>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw2_Pokemon.html">Pokemon</a></p>
+                <li>作業三 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw3_LOL.html">Pokemon</a></p>
             </ul>
         </div>
     </div>
