--- a/html/Hw3_Toyota_2.html
+++ b/html/Hw3_Toyota_2.html
@@ -4,163 +4,200 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toyota_grid</title>
-    <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="reset.css">
+    <title>Hw3_Toyota_grid</title>
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="Hw3_Toyota_2.css">
 </head>
 <body>
-    <div class="control-odd">
-        <div class="decorate"></div>
-        <div class="pic">
-            <img src="Hw3_Toyota/1.png" alt="操控樂趣">
+    <div class="selection">
+        <ul>
+            <li>
+                <a href="#">操控樂趣</a>
+                <a href="#">
+                    <div>操控樂趣</div>
+                </a>
+            </li>
+            <li>
+                <a href="#">安全守護</a>
+                <a href="#">
+                    <div>
+                        安全守護
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">乘坐舒適</a>
+                <a href="#">
+                    <div>
+                        乘坐舒適
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">以人為本</a>
+                <a href="#">
+                    <div>
+                        以人為本
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="#">引以為傲</a>
+                <a href="#">
+                    <div>
+                        引以為傲
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="group">
+        <div class="title">
+            <h3><span>01</span>操控樂趣</h3>
+            <div class="title-content">
+                <h4>人人滿意的駕駛體驗</h4>
+                <p>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。</p>
+            </div>
         </div>
-        <div class="btn-youtube">
+        <div class="pic">
             <a href="#">
-                <img src="Hw3_Toyota/play.png" alt="影片播放">
+                <img src="./Hw3_Toyota/advantage_1.png" alt="操控樂趣">
             </a>
         </div>
-        <div class="introduce">
-            <h2><span>01</span>操控樂趣</h2>
-            <h3>人人滿意的駕駛體驗</h3>
-            <p>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。</p>
-        </div>
-        <div class="innovation">
-            <div class="divider">
-                <h4>因為我們做了這些革新</h4>
-                <hr>
-            </div>
-            <h5>低重心設計</h5>
-            <ul>
-                <li>透過低重心設計，不僅呈現更低服的外觀，更能減少車身側傾，保持高速行駛穩定性。</li>
-            </ul>
-            <h5>車體剛性強化</h5>
-            <ul>
-                <li>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提升車身抗紐剛性，強化駕馭穩定性及安全性。</li>
-            </ul>
-            <h5>四輪獨立懸吊</h5>
-            <ul>
-                <li>搭載全新四輪獨立懸吊設定，透過懸吊的高承載強度，保持輪胎抓地力，同時兼顧轉向靈敏度與清溪路感回饋，提升駕馭樂趣。</li>
-            </ul>
-        </div>
-    </div>
-    <div class="control-even">
-        <div class="decorate"></div>
-        <div class="pic">
-            <img src="Hw3_Toyota/2.png" alt="安全守護">
-        </div>
-        <div class="btn-youtube">
+        <div class="btn">
             <a href="#">
-                <img src="Hw3_Toyota/play.png" alt="影片播放">
+                <img src="./Hw3_Toyota/video_button.png" alt="影片">
             </a>
         </div>
-        <div class="introduce">
-            <h2>安全守護<span>02</span></h2>
-            <h3>行車更安全的高剛性車體</h3>
-            <p>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全功能讓您輕鬆自如享受旅程、毫無後顧之憂。</p>
-        </div>
-        <div class="innovation">
-            <div class="divider">
-                <h4>因為我們做了這些革新</h4>
+        <div class="content">
+            <div class="slg">
+                因為我們做了這些革新
                 <hr>
             </div>
-            <h5>主動安全</h5>
-            <ul>
-                <li>以先進的 TSS 系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</li>
-            </ul>
-            <h5>被動安全</h5>
-            <ul>
-                <li>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</li>
-            </ul>
+            <h4>低重心設計</h4>
+            <p>透過低重心設計，不僅呈現更低服的外觀，更能減少車身側傾，保持高速行駛穩定性。</p>
+            <h4>車體剛性強化</h4>
+            <p>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加焊點數量，提升車身抗紐剛性，強化駕馭穩定性及安全性。</p>
+            <h4>四輪獨立懸吊</h4>
+            <p>搭載全新四輪獨立懸吊設定，透過懸吊的高承載強度，保持輪胎抓地力，同時兼顧轉向靈敏度與清溪路感回饋，提升駕馭樂趣。</p>
         </div>
     </div>
-    <div class="control-odd">
-        <div class="decorate"></div>
+    <div class="group">
+        <div class="title">
+            <h3>安全守護<span>02</span></h3>
+            <div class="title-content">
+                <h4>行車更安全的高剛性車體</h4>
+                <p>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全功能讓您輕鬆自如享受旅程、毫無後顧之憂。</p>
+            </div>
+        </div>
         <div class="pic">
-            <img src="Hw3_Toyota/3.png" alt="乘坐舒適">
+            <a href="#">
+                <img src="./Hw3_Toyota/advantage_2.png" alt="安全守護">
+            </a>
         </div>
-        <div class="btn-youtube">
-            <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <div class="btn">
+            <a href="#">
+                <img src="./Hw3_Toyota/video_button.png" alt="影片">
+            </a>
         </div>
-        <div class="introduce">
-            <h2><span>03</span>乘坐舒適</h2>
-            <h3>令人放鬆舒適的車室空間</h3>
-            <p>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。
-            </p>
-        </div>
-        <div class="innovation">
-            <div class="divider">
-                <h4>因為我們做了這些革新</h4>
+        <div class="content">
+            <div class="slg">
+                因為我們做了這些革新
                 <hr>
             </div>
-            <h5>駕駛位置最佳化</h5>
-            <ul>
-                <li>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地超控方向盤。</li>
-            </ul>
-            <h5>駕馭視野佳</h5>
-            <ul>
-                <li>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，連到盲區極小化，使駕駛視野更開闊，同步提升駕馭安全。</li>
-            </ul>
-            <h5>更寧靜的車室</h5>
-            <ul>
-                <li>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</li>
-            </ul>
+            <h4>主動安全</h4>
+            <p>以先進的 TSS 系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
+            <h4>被動安全</h4>
+            <p>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
         </div>
     </div>
-    <div class="control-even">
-        <div class="decorate"></div>
+    <div class="group">
+        <div class="title">
+            <h3><span>03</span>乘坐舒適</h3>
+            <div class="title-content">
+                <h4>令人放鬆舒適的車室空間</h4>
+                <p>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。</p>
+            </div>
+        </div>
         <div class="pic">
-            <img src="Hw3_Toyota/4.png" alt="以人為本">
+            <a href="#">
+                <img src="./Hw3_Toyota/advantage_3.png" alt="乘坐舒適">
+            </a>
         </div>
-        <div class="btn-youtube">
-            <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <div class="btn">
+            <a href="#">
+                <img src="./Hw3_Toyota/video_button.png" alt="影片">
+            </a>
         </div>
-        <div class="introduce">
-            <h2>以人為本<span>04</span></h2>
-            <h3>使用者導向的貼心設計</h3>
-            <p>藉由高度人性化的介面整合、傳遞車輛資訊、豐富日常駕駛體驗。從提升油耗表現到行李廂空間最適化，均細心考量，更加貼近使用者真正所需與習慣，並給予及時回應。</p>
-        </div>
-        <div class="innovation">
-            <div class="divider">
-                <h4>因為我們做了這些革新</h4>
+        <div class="content">
+            <div class="slg">
+                因為我們做了這些革新
                 <hr>
             </div>
-            <h5>優異油耗表現</h5>
-            <ul>
-                <li>以 AURIS 為例，更強勁的高校引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</li>
-            </ul>
-            <h5>行李箱空間最適化</h5>
-            <ul>
-                <li>以 PRIUS 為例，透過將電池位置移到後座下方，讓行李廂擁有更大的空間。</li>
-            </ul>
+            <h4>駕駛位置最佳化</h4>
+            <p>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地超控方向盤。</p>
+            <h4>駕馭視野佳</h4>
+            <p>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，連到盲區極小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
+            <h4>更寧靜的車室</h4>
+            <p>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
         </div>
     </div>
-    <div class="control-odd">
-        <div class="decorate"></div>
+    <div class="group">
+        <div class="title">
+            <h3>以人為本<span>04</span></h3>
+            <div class="title-content">
+                <h4>使用者導向的貼心設計</h4>
+                <p>藉由高度人性化的介面整合、傳遞車輛資訊、豐富日常駕駛體驗。從提升油耗表現到行李廂空間最適化，均細心考量，更加貼近使用者真正所需與習慣，並給予及時回應。</p>
+            </div>
+        </div>
         <div class="pic">
-            <img src="Hw3_Toyota/5.png" alt="引以為傲">
+            <a href="#">
+                <img src="./Hw3_Toyota/advantage_4.png" alt="以人為本">
+            </a>
         </div>
-        <div class="btn-youtube">
-            <a href="#"><img src="Hw3_Toyota/play.png" alt="影片播放"></a>
+        <div class="btn">
+            <a href="#">
+                <img src="./Hw3_Toyota/video_button.png" alt="影片">
+            </a>
         </div>
-        <div class="introduce">
-            <h2><span>05</span>引以為傲</h2>
-            <h3>極具吸引力的精心設計</h3>
-            <p>TNGA 車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</p>
-        </div>
-        <div class="innovation">
-            <div class="divider">
-                <h4>因為我們做了這些革新</h4>
+        <div class="content">
+            <div class="slg">
+                因為我們做了這些革新
                 <hr>
             </div>
-            <h5>設計概念</h5>
-            <ul>
-                <li>TNGA 低重心設計，不僅呈現更低伏的運動外觀，更講究高品質內裝的一致性。</li>
-            </ul>
-            <h5>環保概念</h5>
-            <ul>
-                <li>為了對環勁保護盡一份心力，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</li>
-            </ul>
+            <h4>優異油耗表現</h4>
+            <p>以 AURIS 為例，更強勁的高校引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
+            <h4>行李箱空間最適化</h4>
+            <p>以 PRIUS 為例，透過將電池位置移到後座下方，讓行李廂擁有更大的空間。</p>
+        </div>
+    </div>
+    <div class="group">
+        <div class="title">
+            <h3><span>05</span>引以為傲</h3>
+            <div class="title-content">
+                <h4>極具吸引力的精心設計</h4>
+                <p>TNGA 車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</p>
+            </div>
+        </div>
+        <div class="pic">
+            <a href="#">
+                <img src="./Hw3_Toyota/advantage_5.png" alt="引以為傲">
+            </a>
+        </div>
+        <div class="btn">
+            <a href="#">
+                <img src="./Hw3_Toyota/video_button.png" alt="影片">
+            </a>
+        </div>
+        <div class="content">
+            <div class="slg">
+                因為我們做了這些革新
+                <hr>
+            </div>
+            <h4>設計概念</h4>
+            <p>TNGA 低重心設計，不僅呈現更低伏的運動外觀，更講究高品質內裝的一致性。</p>
+            <h4>環保概念</h4>
+            <p>為了對環勁保護盡一份心力，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
         </div>
     </div>
 </body>
