--- a/html/Hw4_ShopLine.html
+++ b/html/Hw4_ShopLine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOPLINE</title>
+    <title>Hw4_SHOPLINE_RWD</title>
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="Hw4_ShopLine.css">
     <script src="https://kit.fontawesome.com/277e856a27.js" crossorigin="anonymous"></script>
