--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                 <li>作業二 :</li>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw2_Pokemon.html">Pokemon</a></p>
                 <li>作業三 :</li>
-                <p><a href="https://yu1129.github.io/JavaScript/Hw3_LOL.html">Pokemon</a></p>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw3_LOL.html">LoL</a></p>
+                <li>作業四 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw4_LOL.html">LoL</a></p>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw4_MarketingShare.html">Pokemon</a></p>
             </ul>
         </div>
     </div>
