--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 <li>作業四 :</li>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw4_LoL.html">LoL</a></p>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw4_MarketingShare.html">Pokemon</a></p>
+                <li>作業五 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw5_ultimatepassword.html">終極密碼</a></p>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw5_calculter.html">計算機</a></p>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw5_howmanyAandB.html">幾A幾B</a></p>
+
             </ul>
         </div>
     </div>
