--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
         body{
             background: rgb(127, 255, 212) url(pic.jpg) no-repeat center top / 900px 900px;
         }
-        .root{
-            width: 1000px;
+        .group{
+            width: 70%;
             margin: 20px auto;
+            display: flex;
+            flex-wrap: wrap;
             /* border: 1px solid red; */
         }
         h1{
-            margin-left: 20px;
-        }
-        .web, .js{
-            margin-left: 60px;
-        }
-        .main{
-            margin-left: 100px;
+            width: 100%;
+            text-align: center;
+            /* margin-left: 20px; */
         }
         h1{
             font-size: 45px;
@@ -35,16 +33,36 @@
             font-weight: bold;
             line-height: 200%;
         }
+        .row-cols-sm-1 > .col{
+            width: 100%;
+        }
+        .row-cols-md-2 > .col{
+            width: 50%;
+        }
+        [class*=row-cols-] > .col{
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        /* .web, .js{
+            margin-left: 60px;
+        }
+        .main{
+            margin-left: 100px;
+        } */
         body ul{
             font-size: 30px;
             list-style-type: square;
-            margin: 15px 150px;
+            /* margin: 15px 150px; */
+        }
+        .main{
+            padding-left: 30px;
+            box-sizing: border-box;
         }
         .main p{
             font-size: 20px;
             padding-left: 2em;
             position: relative;
-            margin: 10px 25px;
+            /* margin: 10px 25px; */
         }
         .main p::before{
             content: '';
@@ -64,9 +82,9 @@
     </style>
 </head>
 <body>
-    <div class="root">
+    <div class="group row-cols-sm-1 row-cols-md-2">
         <h1>我的黑客作業</h1>
-        <div class="web">
+        <div class="web col col">
             <h2>我的 HTML + CSS 作業</h2>
             <ul class="main">
                 <li>作業一 :</li>
@@ -82,7 +100,7 @@
                 <p><a href="https://yu1129.github.io/html/Hw5_Bootstrap.html">Bootstrap</a></p>
             </ul>
         </div>
-        <div class="js">
+        <div class="js col col">
             <h2>我的 JavaScript 作業</h2>
             <ul class="main">
                 <li>作業一 :</li>
