--- a/JavaScript/Hw5_HowmanyAandB.html
+++ b/JavaScript/Hw5_HowmanyAandB.html
@@ -118,7 +118,7 @@
 
 
         function checklength(string){
-            if (string.length <= 0 || string.length > 4){
+            if (string.length < 4 || string.length > 4){
                 return true;
             }
             return false;
