--- a/JavaScript/Hw5_HowmanyAandB.html
+++ b/JavaScript/Hw5_HowmanyAandB.html
@@ -64,7 +64,7 @@
         let rule = document.createElement("div");
         let h2 = document.createElement("h2");
         let ol = document.createElement("ol");
-        let lisArray = ["點 \"開始\" ，遊戲才正式開始", "放棄後，需重新點擊開始才可遊戲","A 代表的是 數字對 且 位置也對", "B 代表的是 數字對 但 位置錯"];
+        let lisArray = ["點 \"開始\" ，遊戲才正式開始", "放棄後，需重新點擊開始才可遊戲", "第一個數字不可為 零","A 代表的是 數字對 且 位置也對", "B 代表的是 數字對 但 位置錯"];
         
         lisArray.forEach((item, index) => {
             let li = document.createElement("li");
@@ -75,7 +75,7 @@
         h2.setAttribute("class", "text-center");
         rule.append(h2);
         rule.append(ol);
-        rule.setAttribute("class", "w-75 fs-2 m-auto my-3");
+        rule.setAttribute("class", "w-75 fs-2 m-auto my-1");
 
         result.append(rule);
 
@@ -84,7 +84,6 @@
             random();
             result.innerText = "";
             document.querySelector("#input_box").value = "";
-            // document.querySelector("#input_box").setAttribute("disabled", "disabled");
             document.querySelector("#input_box").disabled = false;
             look.disabled = false;
             lookcount = 0;
@@ -92,11 +91,11 @@
 
         giveup.addEventListener("click", function(event){
             result.innerText = "";
+            rule.animate(tdSpinning, tdTiming);
             result.append(rule);
             document.querySelector("#input_box").value = "";
             look.disabled = true;
             start.disabled = false;
-            // random();
         })
 
         look.addEventListener("click", function(event){
@@ -104,7 +103,6 @@
                 createp();
                 pinner.innerText = `答案是 : ${answer}`;
                 show_result();
-                // document.querySelector("#input_box").setAttribute("disabled", "disabled");
                 document.querySelector("#input_box").disabled = true;
                 start.disabled = true;
             }
@@ -189,6 +187,7 @@
             while (true){
                 if (isRepeat(answer.toString().split("", 4))){
                     answer = getRandomInt(1234, 9876);
+                    answerArray = answer.toString().split("", 4);
                 }
                 else{
                     break;
@@ -197,7 +196,8 @@
         }
 
         function isRepeat(array){
-            var sample = array.sort();
+            let aArray = array;
+            var sample = aArray.sort();
             for(var i = 0; i < array.length; i++){
                 if (sample[i] == sample[i+1]){
                     return true;
@@ -211,6 +211,16 @@
             min = Math.ceil(min);
             max = Math.floor(max);
             return Math.floor(Math.random() * (max - min) + min);
+        }
+
+        const tdSpinning = [
+            { transform: 'rotate(0) scale(0)' },
+            { transform: 'rotate(360deg) scale(1)' }
+        ];
+
+        const tdTiming = {
+            duration: 2000,
+            iterations: 1,
         }
     </script>
 
