--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                 <p><a href="https://yu1129.github.io/JavaScript/Hw5_Ultimatepassword.html">終極密碼</a></p>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw5_Calculter_1.html">計算機</a></p>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw5_HowmanyAandB.html">幾A幾B</a></p>
+                <li>作業六 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw6_iPadAir.html">iPad Air</a></p>
 
             </ul>
         </div>
