--- a/JavaScript/Hw6_iPadAir.html
+++ b/JavaScript/Hw6_iPadAir.html
@@ -67,7 +67,7 @@
     <div class="container bg-white">
         <nav class="title d-flex justify-content-md-evenly align-content-md-center">
             <h2><a href="#" class="text-decoration-none fs-4 text-black">iPad Air</a></h2>
-            <p class="fs-4 lh-lg text-end"></p>
+            <p class="fs-4 text-end"></p>
         </nav>
     </div>
     <div class="notice text-center">
@@ -77,6 +77,7 @@
 
 
     <script src="Hw6_iPadAir.js"></script>
+    <!-- <script src="Hw6_iPadAir_createElement.js"></script> -->
     <script>
         
         
