--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                 <p><a href="https://yu1129.github.io/JavaScript/Hw5_HowmanyAandB.html">幾A幾B</a></p>
                 <li>作業六 :</li>
                 <p><a href="https://yu1129.github.io/JavaScript/Hw6_iPadAir.html">iPad Air</a></p>
+                <li>作業七 :</li>
+                <p><a href="https://yu1129.github.io/JavaScript/Hw7_LoL.html">LoL</a></p>
 
             </ul>
         </div>
