--- a/JavaScript/Hw7_LoL.html
+++ b/JavaScript/Hw7_LoL.html
@@ -168,7 +168,7 @@
     </script>
 
     <script type="module">
-        import { $g } from "./20220503_modle.js";
+        import { $g } from "./Hw7_modle.js";
 
         container = $g("#container");
         cardTemplate = $g("#cardTemplate");
